--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
   <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+  <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
   <title>React App</title>
 </head>
 
@@ -35,6 +36,10 @@
     crossorigin="anonymous"></script>
 
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
+<script>
+    baguetteBox.run('.tz-gallery');
+</script> -->
 </body>
 
 </html>
