--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,14 +15,13 @@
     integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
     crossorigin="anonymous" />
 
-  <link rel="shortcut icon" href="./aero.png" type="image/x-icon">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/aero.png" type="image/x-icon">
   <title>%REACT_APP_BASE_TITLE%</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -40,7 +39,7 @@
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-  
+
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
