sponsor link fixed

--- a/aeroclub/public/index.html
+++ b/aeroclub/public/index.html
@@ -21,7 +21,8 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>AeroClub MNNIT, established in 2018, is a student body congregating students from various branches of our
+    college.</noscript>
   <div id="root"></div>
   <!--
       This HTML file is a template.
